--- a/snippets/product-page.liquid
+++ b/snippets/product-page.liquid
@@ -1186,6 +1186,11 @@ endif
                 style="--spacing-top: {{ spacing_top | append: 'px' }}; --spacing-bottom: {{ spacing_bottom | append: 'px' }}">
                 {% render 'product-payment-promo', block: block, section: section %}
               </div>
+              {%- when 'promo_countdown' -%}
+              <div class="productView-moreItem"
+                style="--spacing-top: {{ spacing_top | append: 'px' }}; --spacing-bottom: {{ spacing_bottom | append: 'px' }}">
+                {% render 'product-promo-countdown', block: block, section: section %}
+              </div>
               {%- when 'breadcrumb' -%}
               {%- if breadcrumb_layout == 'content' -%}
               <div
